5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1602_2894.log
== TEST (2019-03-20 18:46:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogos+45

# Impressao do valor total:
print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = jogos+45
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:46:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = jogos+45

# Impressao do valor total:
print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = jogos+45
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:47:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(159.0))

# Calculo do valor a ser pago, incluindo o frete:
total = jogos+45.0

# Impressao do valor total:
print(1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = jogos+45.0
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:47:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(159.0))

# Calculo do valor a ser pago, incluindo o frete:
total = jogos+45.0

# Impressao do valor total:
print(1)
-- EXECUTION TIME:
0.189529
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total = jogos+45.0
NameError: name 'jogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:47:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(159.0))

# Calculo do valor a ser pago, incluindo o frete:
total = jogos+45.0

# Impressao do valor total:
print(1)
-- EXECUTION TIME:
0.155672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total = jogos+45.0
NameError: name 'jogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:47:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(159.0))

# Calculo do valor a ser pago, incluindo o frete:
total = jogos+45.0

# Impressao do valor total:
print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = jogos+45.0
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:47:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(159.0))

# Calculo do valor a ser pago, incluindo o frete:
total = jogos+45.0

# Impressao do valor total:
print("total")
-- EXECUTION TIME:
0.211296
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2894/main.py", line 8, in <module>
    total = jogos+45.0
NameError: name 'jogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:51:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*var+45

# Impressao do valor total:
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:51:52) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*var+45

# Impressao do valor total:
print("total")
-- EXECUTION TIME:
0.172143
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*var+45

# Impressao do valor total:
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:53:24) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*var+45

# Impressao do valor total:
print("total")
-- EXECUTION TIME:
0.193055
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:53:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8**var+45

# Impressao do valor total:
print("total")
-- EXECUTION TIME:
0.130433
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:54:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*(var+45)

# Impressao do valor total:
print("total")
-- EXECUTION TIME:
0.170342
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:54:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total =8*var+45

# Impressao do valor total:
print("total")
-- EXECUTION TIME:
0.105348
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:54:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print("total")
-- EXECUTION TIME:
0.210029
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
total
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
total
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:55:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var*8+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.1715
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
